# SignalNebula

./: README.md
SignalNebula/: Dockerfile  README.md  pyproject.toml  repo-meta.json
SignalNebula/data/: sample_signal.csv
SignalNebula/docs/: architecture.md
SignalNebula/docs/adr/: ADR-001.md  ADR-002.md  ADR-003.md
SignalNebula/signalnebula/: cli.py  engine.py  models.py  utils.py
SignalNebula/tests/: test_signalnebula.py
